src/tests/test-src/errors/E27-redeclare-primitive.syntran
// E27: redeclare-primitive
// A struct was declared with a name reserved for a primitive type

struct i32
{
	x: i32,
}
